public class NodoFrame {
    public Frame dato;
    public NodoFrame siguiente;

    public NodoFrame(Frame dato) {
        this.dato = dato;
        this.siguiente = null;
    }
}
